syntax = "proto3";

package bidding;

option go_package = "grpc/proto";

service Bidding {
  rpc ConnectToReplicator(Void) returns (stream ReplicatorUpdate);
  rpc Bid(Amount) returns (BidAck);
  rpc Result(Void) returns (Outcome);
}

message Amount {
  int64 amount = 1;
  string name = 2;
}

message BidAck {
  Amount highestBid = 1;
  int64 timeLeft = 2;
}

message Outcome {
  Amount highestBid = 1;
  bool isResult = 2;
}

message ReplicatorUpdate {
  Amount bid = 1;
  int64 timeLeft = 2;
  bool isResult = 3;
  int64 id = 4;
  int64 primaryId = 5;
}


message Void {

}